# ML-Learner

./: .gitattributes  .gitignore  Dockerfile  Jenkinsfile  README.md  bare_use_effects.txt  gitlog.txt  gitlog2.txt  navbar_diff.txt  nginx.conf  temp.py
python_backend/: .env.example  .gitignore  db.sqlite  db.sqlite-shm  db.sqlite-wal  debug_env.py  main.py  mlflow.db  problems_refactored.json  pyproject.toml  refactor_problems.py  requirements.txt
python_backend/api/: app.py
python_backend/api/middlewares/: form_to_json.py  verifyuser_middleware.py
python_backend/artifact/: interview.json
python_backend/artifact/jobs/: Frontend.csv  aiml intern.csv  jobs.csv  machine learning intern.csv
python_backend/config/: model_train.yaml
python_backend/notebook/: job_sim_matcher.ipynb  machine learning intern.csv
python_backend/notebooks/: jobscraper.ipynb
python_backend/src/: app.py
python_backend/src/components/: coderun.py  dummyInterviews.py  generate_interview_performance.py  get_summary_using_resume_pdf.py  interview.py  model_train.py  resume.py
python_backend/src/constants/: __init__.py
python_backend/src/controllers/: __init__.py  coding_controllers.py  deleteThread_controller.py  health_controllers.py  interview_controller.py  modelTrain_controller.py  performance_controller.py  user_controller.py
python_backend/src/exception/: __init__.py
python_backend/src/logger/: __init__.py
python_backend/src/models/: Performance_model.py  submission_models.py  userSchema_model.py
python_backend/src/pipelines/: AboutUserByResume_pipeline.py  ChatInterviewer_pipeline.py  SchemaGeneration_pipeline.py  interviewSchemaPipeline.py  performance_pipeline.py
python_backend/src/prompts/: __init__.py  dummyInterview_prompts.py  generateInterviewPerformance_prompts.py  interview_prompts.py  resumeGeneration_prompts.py  resumeSummary_prompts.py
python_backend/src/routes/: ModelTrainConfig_router.py  coding_router.py  coding_routes.py  deleteThread_router.py  deleteThread_routes.py  health_routes.py  interviewSchema_router.py  interviewSchema_routes.py  modelTraining_router.py  performance_router.py  performance_routes.py  user_router.py  user_routes.py
python_backend/src/utils/: common_LLm.py  main_utils.py  route_middleware.py
python_backend/test_content/: index.html
python_backend/utils/: main_utils.py
server/: .gitignore  docker-compose.yml  insert_problems.py  main.py  normalize_problems.py  problems.json  pyproject.toml  pytest.ini  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 63d5b6057139_.py
server/api/: app.py
server/api/database/: __init__.py  db.py
server/api/helper/: __init__.py  code_runner.py  multi_rag_helper.py  resume_helper.py
server/api/middlewares/: multer_middleware.py  multi_rag_middleware.py  verifyuser_middleware.py
server/api/models/: coding_models.py  interview_models.py  job_models.py  model_train_model.py  multi_rag_models.py  question_models.py  template_model.py  user_model.py
server/api/routes/: FormFiller_router.py  coding_routes.py  common_routes.py  faceFind_routes.py  interview_router.py  interview_routes.py  interviews_routes.py  jobFetcher_router.py  job_routes.py  jobmodelDownloader_router.py  modelTrainConfig_router.py  modelTraining_router.py  multi_rag_routes.py  performance_router.py  performance_routes.py  (+6 more)
server/artifact/: interview.json
server/config/: app_config.py
server/db/: __init__.py  connection.py
server/docs/: vansh.txt
server/exception/: __init__.py
server/notebook/: convert_to_pdf.ipynb  job_sim_matcher.ipynb  mlflow.db  mlflow_model_loader.ipynb  model_training.ipynb  rag.ipynb
server/public/: run.py
(+465 files in other folders)
