[project]
name = "Interview-Cracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "dill>=0.4.1",
    "fastapi>=0.135.1",
    "from-root>=1.3.0",
    "langchain>=1.2.10",
    "langchain-aws>=1.3.1",
    "langchain-community>=0.4.1",
    "langgraph>=1.2.4",
    "langgraph-prebuilt>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "pypdf>=6.7.1",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "uvicorn[standard]>=0.40.0",
    "vconsoleprint>=1.0.2",
    "mediapipe==0.10.14",
    "opencv-python>=4.13.0.92",
    "websockets>=14.0,<16.0",
    "langsmith>=0.6.6",
    "selenium>=4.41.0",
    "pandas>=2.0.0",
    "datasets>=4.8.4",
    "nltk>=3.9.4",
    "transformers>=5.3.0",
    "tqdm>=4.67.3",
    "mlflow>=3.10.1",
    "dagshub>=0.6.9",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.12",
    "bcrypt>=5.0.0",
    "pyjwt>=2.13.0",
    "pydantic[email]>=2.12.5",
    "cloudinary>=1.44.2",
    "langchain-groq>=1.1.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "bert-extractive-summarizer>=0.10.1",
    "docx2txt>=0.9",
    "dotenv>=0.9.9",
    "easyocr>=1.7.2",
    "faiss-cpu>=1.13.2",
    "flashrank>=0.2.10",
    "keybert>=0.9.0",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.17",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-tavily>=0.2.18",
    "pdf2image>=1.17.0",
    "pdfminer-six>=20260107",
    "pi-heif>=1.3.0",
    "pillow>=12.1.1",
    "pytesseract>=0.3.13",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.3",
    "unstructured[all-docs]>=0.21.5",
    "unstructured-inference>=1.6.11",
    "unstructured-pytesseract>=0.3.15",
    "youtube-transcript-api>=1.2.4",
    "docx2pdf>=0.1.8",
    "fpdf>=1.7.2",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
interview-cracker = { workspace = true }

[dependency-groups]
dev = [
    "interview-cracker",
]
